Fix User Profile on mobile
Moved user profile stylings to only apply on desktop and prevent overflow on mobile

--- a/css/settings.css
+++ b/css/settings.css
@@ -12,7 +12,9 @@ section {
   align-items: start;
 }
 
-.user-profile {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+@media (min-width: 400px) {
+  .user-profile {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  }
 }
